@@ -1,5 +1,5 @@
 /*
- * Copyright (c) Damien Miller <djm@mindrot.org>
+ * Copyright (c) 2007 Damien Miller <djm@mindrot.org>
  *
  * Permission to use, copy, modify, and distribute this software for any
  * purpose with or without fee is hereby granted, provided that the above
